2-15-mesh-expansion/k8s/color2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: color2
  namespace: faces
spec:
  type: ClusterIP
  selector:
    service: color2
  ports:
  - port: 80
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color2
  namespace: faces
spec:
  replicas: 1
  selector:
    matchLabels:
      service: color2
  template:
    metadata:
      labels:
        service: color2
    spec:
      containers:
      - name: color
        image: ghcr.io/buoyantio/faces-workload:1.0.0-alpha.1
        ports:
        - name: http
          containerPort: 8000
        resources:
          requests:
            cpu: 300m     # The face service doesn't need much memory, but it does need more
            memory: 64Mi  # CPU than the other backend services since it has to call the
          limits:         # face and smiley services, then composite the results.
            cpu: 500m
            memory: 128Mi
