2-15-mesh-expansion/k8s/external-pi-color.yaml
apiVersion: v1
kind: Service
metadata:
  name: color
  namespace: faces
spec:
  type: ClusterIP
  selector:
    workload_name: color
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
