2-15-mesh-expansion/k8s/smiley-workload.yaml
apiVersion: v1
kind: Service
metadata:
  name: smiley
  namespace: faces
spec:
  type: ClusterIP
  selector:
    workload_name: smiley
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
