2-15-mesh-expansion/k8s/external-auth.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: external-authn
  namespace: mixed-env
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: MeshTLSAuthentication
    name: external-workload-mtls
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: external-workloads
